--- a/frontend/src/components/delivery/YaPvzPickerModal.module.css
+++ b/frontend/src/components/delivery/YaPvzPickerModal.module.css
@@ -11,7 +11,8 @@
 }
 
 .modal {
-  width: min(1400px, 96vw);
+  width: min(1200px, 95vw);
+  max-width: 1200px;
   height: min(860px, 92vh);
   background: #0b1630;
   border-radius: 16px;
@@ -55,8 +56,18 @@
 /* КЛЮЧ: контейнер реально занимает всю площадь */
 .widget {
   width: 100%;
+  height: 780px;
+  min-height: 780px;
+}
+
+.notice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
-  min-height: 0;
+  padding: 24px;
+  color: #1f2937;
+  text-align: center;
 }
 
 /* Мобилка: пусть будет 1 колонка (это норм) */
